# tauri-motrix

./: .gitignore  .prettierignore  .prettierrc  README.md  bun.lockb  eslint.config.js  index.html  jest-setup.ts  jest.config.ts  lint-staged.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rsbuild.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: UPDATE_LOG.md
scripts/: aria2_helper.mjs  check.mjs  environment.mjs  update_log.mjs  updater.mjs  utils.mjs
src/: App.tsx  _layout.tsx  _routers.tsx  env.d.ts  i18n.ts  main.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cmd/: app.rs  aria2.rs  mod.rs  motrix.rs
src-tauri/src/config/: aria2.rs  config.rs  draft.rs  mod.rs  motrix.rs  runtime.rs
src-tauri/src/core/: core.rs  handle.rs  mod.rs  sys_opt.rs
src-tauri/src/feat/: config.rs  mod.rs  window.rs
src-tauri/src/service/: aria2c.rs  i18n.rs  log.rs  mod.rs  tray.rs
src-tauri/src/utils/: dirs.rs  help.rs  init.rs  logging.rs  mod.rs  resolve.rs  sys.rs  window.rs
tests/: Application.spec.tsx  BaseDrawer.spec.tsx  BaseEmpty.spec.tsx  BasePage.spec.tsx  ConfirmPanel.spec.tsx  DragDropFileUpload.spec.tsx  InputFileUpload.spec.tsx  LinearProgressWithLabel.spec.tsx  PathComboBox.spec.tsx  aria2c_rpc.test.ts  array_add_or_remove.spec.ts  build_atom.spec.ts  download.spec.ts  file_util.spec.ts  language_service.test.ts  motrix_ipc.test.ts  polling.spec.ts  task.spec.ts  task.test.ts  (+2 more)
(+144 files in other folders)
