[package]
name = "tauri-motrix"
version = "0.2.1"
description = "A Tauri App"
authors = ["Taoister39"]
repository = "https://github.com/Taoister39/tauri-motrix"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_motrix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12.3"
once_cell = "1.21.3"
dunce = "1.0.5"
anyhow = "1.0.97"
log = "0.4.27"
serde_yaml = "0.9.34"
tokio = "1.44.1"
fs2 = "0.4.3"
tauri-plugin-shell = "2.2.1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
chrono = "0.4.40"
log4rs = "1.3.0"
tauri-plugin-notification = "2"
open = "5.3.2"
sys-locale = "0.3.2"
reqwest = "0.12.15"
uuid = "1.16.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0"
